--- a/package.json
+++ b/package.json
@@ -3,5 +3,11 @@
   "version": "0.1.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  },
+  "dependencies": {
+    "request": "^2.81.0",
+    "request-promise-native": "^1.0.4",
+    "sha1": "^1.1.1"
+  },
+  "devDependencies": {}
 }
