--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "request": "^2.81.0",
     "request-promise-native": "^1.0.4",
-    "sha1": "^1.1.1"
+    "sha1": "^1.1.1",
+    "yargs": "^8.0.1"
   },
   "devDependencies": {}
 }
